fixed home slide on mobile

--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -87,6 +87,7 @@ a
   &--home
     background-image url("/images/home.jpg")
     align-items flex-end
+    padding-top: 130px;
     .slide__panel
       margin-bottom 20px
   &--capsulas
@@ -170,6 +171,8 @@ a
       flex-direction row
       .slide__panel
         min-height 505px
+    &--home
+      padding-top 55px
   .header
     flex-direction row
     justify-content: space-between;
@@ -181,6 +184,7 @@ a
     &__panel
       margin-left 50px
     &--home
+      padding-top 0
       .slide__panel
         width 90%
     &--servicios
